[package]
name = "hatchery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "3.0.0-beta.5"
dotenv = "0.15.0"
lastfm-rs = "0.2.2"
md5 = "0.7.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusqlite = "0.24.2"
sea-query = { version = "0.18.2", features = ["rusqlite"] }
serde = { version = "1.0.0", features = ["derive"] }
serde-aux = "3.0.1"
serde_json = "1.0.0"
serde_with = { version = "1.11.0", features = ["chrono"] }
