[package]
name = "hatchery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.8"
chrono = "0.4"
clap = "3.0.0-beta.5"
csv = "1.1.6"
dotenv = "0.15.0"
env_logger = "0.9.0"
lastfm-rs = "0.2.2"
log = "0.4.14"
md5 = "0.7.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusqlite = { version = "0.26.1", features = ["chrono"] }
serde = { version = "1.0.0", features = ["derive"] }
serde-aux = "3.0.1"
serde_json = "1.0.0"
serde_with = { version = "1.11.0", features = ["chrono"] }
